# creative-video-platform

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  build.gradle  settings.gradle
backend/src/main/resources/: application.yml
docs/: ARCHITECTURE.md  LAYER-MODEL.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/features/admin/: AdminUsersPage.tsx
frontend/src/features/auth/: AccountPage.tsx  LoginPage.tsx
frontend/src/features/editor/: EditorPage.tsx
infra/: README.md  terragrunt.hcl
infra/environments/dev/: env.hcl  terragrunt.hcl
infra/environments/prod/: env.hcl  terragrunt.hcl
infra/environments/staging/: env.hcl  terragrunt.hcl
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/queue/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/modules/worker/: main.tf  outputs.tf  variables.tf
scripts/: start-all.sh  start-backend.sh  start-deps.sh  start-frontend.sh  start-worker.sh  stop-all.sh
worker/: README.md  pyproject.toml
worker/tests/: conftest.py  test_ffmpeg_builder.py  test_models.py  test_text_layout.py
worker/worker/: __init__.py  config.py  errors.py  logging_setup.py  main.py  models.py  storage.py  subtitle.py  text_layout.py
worker/worker/renderer/: __init__.py  asset_manager.py  engine.py  ffmpeg_builder.py  layer_renderer.py
(+137 files in other folders)
